tests/errors/surf_arity_09.experr
function missing required argument 'y'
